--- a/src/main/resources/templates/listUser.html
+++ b/src/main/resources/templates/listUser.html
@@ -46,6 +46,20 @@
 
     <a th:href="@{/admin/addUsers}" class="btn btn-primary btn-sm mb-3"> Add User </a>
 
+
+    <form th:action="@{/admin/search}" method="get" class="form-inline mb-3">
+        <div class="form-group">
+            <label for="searchField">Search:</label>
+            <select class="form-control" id="searchType" name="queryType">
+                <option value="firstName">First Name</option>
+                <option value="lastName">Last Name</option>
+                <option value="email">Email</option>
+            </select>
+            <input type="text" class="form-control" id="searchField" name="queryWord" placeholder="Search">
+        </div>
+        <button type="submit" class="btn btn-primary">Search</button>
+    </form>
+
     <table class="table table-striped table-responsive-md">
         <thead>
         <tr>
